# reflexion

./: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  checkstyle.xml  gradle.properties  license.txt  license_header.txt  settings.gradle.kts
.cargo/: config.toml
.github/workflows/: ci.yml
gradle/wrapper/: gradle-wrapper.properties
native/: Cargo.toml  build.gradle.kts  build.ps1
native/src/: lib.rs
reflexion/: build.gradle.kts
reflexion/src/jmh/java/dev/derklaro/reflexion/: ReflexionBenchmark.java  SeedClass.java
reflexion/src/main/java/dev/derklaro/reflexion/: AccessorFactory.java  BaseAccessor.java  FieldAccessor.java  MethodAccessor.java  NativeHelper.java  Reflexion.java  ReflexionException.java  ReflexionPopulator.java  Result.java
reflexion/src/main/java/dev/derklaro/reflexion/internal/: AccessorFactoryLoader.java
reflexion/src/test/java/dev/derklaro/reflexion/: AccessorFactoryTest.java  BareAccessorFactoryTest.java  ConstructorReflexionTest.java  FieldReflexionTest.java  GeneralReflexionTest.java  HardReflectionTest.java  MethodReflexionTest.java  ReflexionFieldTest.java  SeedClass.java  SeedSuperClass.java  TypeTest.java  UnreflectTest.java  UtilTest.java
src/main/c/: jni_nativereflection.cpp  jni_nativereflection.h  jni_reflexion_field.cpp  jni_reflexion_field.h  jni_util.cpp  jni_util.h
src/main/java/com/github/derklaro/reflexion/: Main.java  NativeHelper.java  NativeReflection.java
src/main/java/dev/derklaro/reflexion/: NativeHelper.java
src/main/java/dev/derklaro/reflexion/natives/: Abc.java  FNativeReflect.java  Main.java
(+28 files in other folders)
